<resources>
    <string name="font_normal" translatable="false">sans-serif</string>
    <string name="font_light" translatable="false">sans-serif-light</string>
    <string name="font_condensed" translatable="false">sans-serif-condensed</string>
    <string name="app_name">Toserba 23</string>
    <string name="action_settings">Settings</string>
    <string name="settings_shared_preferences_label">My Preferences</string>
    <string name="settings_url_label">URL</string>
    <string name="settings_url_key" translatable="false">url</string>
    <string name="settings_account_name_label">Account Name</string>
    <string name="settings_account_name_key" translatable="false">account_name</string>
    <string name="settings_password_label">Password</string>
    <string name="settings_password_key" translatable="false">password</string>
    <string name="settings_database_name_label">Database Name</string>
    <string name="settings_database_name__key" translatable="false">database_name</string>
    <string name="settings_is_login_key" translatable="false">is_logged_in</string>
    <string name="settings_user_id_key" translatable="false">user_id</string>
    <string name="settings_user_lat_key" translatable="false">user_lat</string>
    <string name="settings_user_lon_key" translatable="false">user_lon</string>
    <string name="cancel_string">Cancel</string>
    <string name="confirm_string">Confirm</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="ok_string">OK</string>
    <string name="search_string">Search</string>
    <string name="setting_string">Setting</string>
    <string name="attendance_string">Attendance</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="no_access_right_error">You are not authorized to access the data. Contact your system administrator for more information.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="sale_string">Sales</string>
    <string name="product_string_online">Product-Pricelist</string>
    <string name="product_string_offline">Product-Pricelist(Offline)</string>
    <string name="qr_scanner_menu">QR Scanner</string>
    <string name="sale_menu">Sales Order</string>
    <string name="partner_string">Partner</string>
    <string name="stock_string">Inventory</string>
    <string name="other_string">Others</string>
    <string name="offline_mode_string">To Offline Mode</string>
    <string name="logout_string">Logout</string>
    <string name="online_mode_string">To Online Mode</string>
    <string name="login_activity">Login to your account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_in">Login</string>
    <string name="label_select_database">Select Database</string>
    <string name="label_accept_login">Accept &amp; Login</string>
    <string name="label_your_self_hosted_url">Your self-hosted URL</string>
    <string name="label_username_or_email">Username or email</string>
    <string name="label_password">Password</string>
    <string name="label_to_offline_mode">To Offline Mode</string>
    <string name="error_no_internet_connection">No Internet Connection !</string>
    <string name="error_invalid_odoo_url">Invalid Odoo URL !</string>
    <string name="error_provide_server_url">Provide server URL</string>
    <string name="error_provide_username">Provide username</string>
    <string name="error_provide_password">Provide password</string>
    <string name="error_provide_database">Provide database</string>
    <string name="error_invalid_username_or_password">Invalid Username or Password</string>
    <string name="error_cannot_connect_to_server">Can not connect to server</string>
    <string name="status_connecting_to_server">Connecting&#8230;</string>
    <string name="status_connected_to_server">Connected</string>
    <string name="status_logging_in">Logging in&#8230;</string>
    <string name="status_login_success">Login Success</string>
    <string name="disclaimer_content">By continuing, you agree to the Terms of Service and Privacy Policy</string>
    <string name="settings_title">Settings</string>
    <string name="default_partner_string">Default Partner</string>
    <string name="default_partner_explanation">Partner selected here will be used to filter quotation and sale order. You can add product to quotation only when a default partner exist.</string>
    <string name="default_partner_dialog_title">Default Partner Change</string>
    <string name="default_partner_dialog_exp">Choose Clear button to delete any selected default partner. Enter new partner name and enter to choose new default partner</string>
    <string name="default_partner_dialog_exp2">Enter new partner name</string>
    <string name="default_partner_dialog_clear_button">Clear</string>
    <string name="default_partner_dialog_change_button">Change</string>
    <string name="settings_def_partner_id_key" translatable="false">default_partner_id</string>
    <string name="settings_def_partner_name_key" translatable="false">default_partner_name</string>
    <string name="detail_product_activity_label">Product-Pricelist</string>
    <string name="detail_product_offline_activity_label">Product-Pricelist (Offline)</string>
    <string name="product_template_title">Product List</string>
    <string name="product_template_title_offline">Product List (Offline)</string>
    <string name="start_download_alert_dialog_title_string">Start Download</string>
    <string name="start_download_alert_dialog_string">Start downloading data from server?</string>
    <string name="warning_download_is_in_progress">Download is starting. Please wait a while for this process to finish</string>
    <string name="no_product_template">No product found!</string>
    <string name="error_cannot_get_database">Can not get data from database!</string>
    <string name="finish_download_product_alert_dialog_title_string">Product Download Finished</string>
    <string name="finish_download_product_alert_dialog_string">Product data download has finished</string>
    <string name="finish_download_pricelist_alert_dialog_title_string">Pricelist Download Finished</string>
    <string name="finish_download_pricelist_alert_dialog_string">Pricelist data download has finished</string>
    <string name="product_name_header">Product Name</string>
    <string name="qty_header">Qty</string>
    <string name="virtual_available_header">Qty*</string>
    <string name="fetch_product_pricelist_string">Download Product-Pricelist</string>
    <string name="detail_product_category_string">Category</string>
    <string name="detail_product_uom_string">UoM</string>
    <string name="detail_product_qty_ckl_string">Qty CKL</string>
    <string name="detail_product_qty2_ckl_string">Qty* CKL</string>
    <string name="detail_product_qty_prl_string">Qty PRL</string>
    <string name="detail_product_qty2_prl_string">Qty* PRL</string>
    <string name="detail_product_description_section_string">Description</string>
    <string name="detail_product_price_display_section_string">Display Price</string>
    <string name="detail_product_display_price_harga_jual">Harga Jual</string>
    <string name="detail_product_display_price_harga_grosir">Harga Grosir</string>
    <string name="detail_product_display_price_harga_toko">Harga Toko</string>
    <string name="detail_product_display_price_harga_bulukumba">Harga Bulukumba</string>
    <string name="detail_product_display_price_harga_bulukumbas">Harga Bulukumba S</string>
    <string name="detail_product_display_price_harga_promo">Harga Promo</string>
    <string name="detail_product_display_price_promo_cash">Promo Cash</string>
    <string name="detail_product_pricelist_section_string">Pricelist</string>
    <string name="detail_product_pricelist_min_string">Min. Qty</string>
    <string name="detail_product_pricelist_notes_string">Notes</string>
    <string name="detail_product_options_menu_add_string">Add to quotation</string>
    <string name="detail_product_options_add_so_dialog_title">Add to quotation</string>
    <string name="detail_product_options_add_so_dialog_product_label">Product Qty</string>
    <string name="detail_product_options_add_so_dialog_notes_label">Notes</string>
    <string name="detail_product_options_add_so_dialog_exp">Choose from the following quotation to add the product to it. Choose Create New button to create new quotation.</string>
    <string name="detail_product_options_add_so_dialog_create">Create New</string>
    <string name="detail_product_options_add_so_dialog_no_quotation">No Quotation</string>
    <string name="error_no_default_partner">Please provide default partner from the setting page</string>
    <string name="detail_product_options_add_so_success">Adding product success!</string>
    <string name="detail_product_options_add_so_failed">Failed adding product!</string>
    <string name="detail_product_save_image_dialog">Save Image</string>
    <string name="detail_product_save_image_directory_name">Toserba 23 Products</string>
    <string name="detail_product_save_image_confirmation">Image Saved</string>
    <string name="detail_product_send_wa_dialog_title">Choose additional info to send</string>
    <string name="detail_product_description_string">Description</string>
    <string name="detail_product_image_string">Image</string>
    <string name="detail_product_background_string">White Background</string>
    <string name="qr_scan_title">Product QR Scan</string>
    <string name="scan_result_title">Scan Results</string>
    <string name="qr_multiple_scan_results">Multiple product with the qr code found. Choose one from the following list to show</string>
    <string name="dialog_list_title">Duplicate Products</string>
    <string name="error_product_not_found">Product Not Found</string>
    <string name="sale_order_title">Sale Order List</string>
    <string name="detail_sale_line_activity_label">Sale Order Detail</string>
    <string name="sale_menu_options_all">All</string>
    <string name="sale_menu_options_draft">Quotation</string>
    <string name="sale_menu_options_sale">Sales Order</string>
    <string name="sale_order_not_found">Sale Order Not Found</string>
    <string name="error_order_not_found">Sale Order Not Found</string>
    <string name="detail_sale_order_partner">Partner</string>
    <string name="detail_sale_order_payment_term">Payment Terms</string>
    <string name="detail_sale_order_warehouse">Warehouse</string>
    <string name="detail_sale_order_pricelist">Pricelist</string>
    <string name="detail_sale_order_line">Order Detail</string>
    <string name="detail_sale_order_cross_sign" translatable="false">x</string>
    <string name="detail_sale_order_total">Total</string>
    <string name="detail_sale_order_delivery_information">Delivery Information</string>
    <string name="detail_sale_order_transporter">Transporter</string>
    <string name="stock_picking_options_in">Receive</string>
    <string name="stock_picking_options_int">Internal Transfer</string>
    <string name="stock_picking_options_out">Delivery</string>
    <string name="stock_picking_options_all">All</string>
    <string name="stock_picking_options_not_done">Not Done</string>
    <string name="stock_picking_options_waiting">Waiting Validation</string>
    <string name="leave_menu_options_all">All</string>
    <string name="leave_menu_options_confirm">To Approve</string>
    <string name="leave_menu_options_validate">Second Approval</string>
    <string name="detail_leave_options_edit_dialog_save_button">Save</string>
    <string name="mail_message_create_dialog_title">Create new note</string>
</resources>