<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_search_input_text"
        android:icon="@drawable/ic_search"
        android:title="@string/search_string"
        android:visible="true"
        app:showAsAction="always"/>
    <group
        android:id="@+id/stock_type_filter"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/checkbox_stock_type_all"
            android:title="@string/stock_picking_options_all"
            android:titleCondensed="@string/stock_picking_options_all"
            android:checked="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_stock_in"
            android:title="@string/stock_picking_options_in"
            android:titleCondensed="@string/stock_picking_options_in"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_stock_int"
            android:title="@string/stock_picking_options_int"
            android:titleCondensed="@string/stock_picking_options_int"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_stock_out"
            android:title="@string/stock_picking_options_out"
            android:titleCondensed="@string/stock_picking_options_out"
            app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/stock_state_filter"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/checkbox_stock_state_all"
            android:title="@string/stock_picking_options_all"
            android:titleCondensed="@string/stock_picking_options_all"
            android:checked="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_stock_not_done"
            android:title="@string/stock_picking_options_not_done"
            android:titleCondensed="@string/stock_picking_options_not_done"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_stock_waiting"
            android:title="@string/stock_picking_options_waiting"
            android:titleCondensed="@string/stock_picking_options_waiting"
            app:showAsAction="never"/>
    </group>
</menu>