<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_search_input_text"
        android:icon="@drawable/ic_search"
        android:title="@string/search_string"
        android:visible="true"
        app:showAsAction="always"/>
    <group
        android:id="@+id/sale_state_filter"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/checkbox_sale_all"
            android:title="@string/sale_menu_options_all"
            android:titleCondensed="@string/sale_menu_options_all"
            android:checked="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_sale_draft"
            android:title="@string/sale_menu_options_draft"
            android:titleCondensed="@string/sale_menu_options_draft"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_sale_sale"
            android:title="@string/sale_menu_options_sale"
            android:titleCondensed="@string/sale_menu_options_sale"
            app:showAsAction="never"/>
    </group>
</menu>