<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--item
        android:id="@+id/show_search_input_text"
        android:icon="@drawable/ic_search"
        android:title="@string/search_string"
        android:visible="true"
        app:showAsAction="always"/-->
    <group
        android:id="@+id/leave_filter"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/checkbox_leave_all"
            android:title="@string/leave_menu_options_all"
            android:titleCondensed="@string/leave_menu_options_all"
            android:checked="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_leave_confirm"
            android:title="@string/leave_menu_options_confirm"
            android:titleCondensed="@string/leave_menu_options_confirm"
            app:showAsAction="never"/>
        <item
            android:id="@+id/checkbox_leave_validate"
            android:title="@string/leave_menu_options_validate"
            android:titleCondensed="@string/leave_menu_options_validate"
            app:showAsAction="never"/>
    </group>
</menu>