<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/settings_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/inside_margin"
    android:orientation="vertical"
    android:background="@drawable/background_with_shadow"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_margin"
        android:ellipsize="end"
        android:gravity="center"
        android:textColor="@color/body_text_1"
        android:textSize="@dimen/text_size_xlarge"
        android:text="@string/detail_product_options_add_so_dialog_title"
        tools:text="Tambahkan ke Order Penjualan"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layerType="software"
        android:background="@drawable/line_section_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/inside_margin"
        android:orientation="horizontal"
        android:background="@color/itemBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/body_text_1"
            android:textSize="@dimen/text_size_large"
            android:text="@string/detail_product_options_add_so_dialog_product_label"
            tools:text="Qty produk"/>
        <Button
            android:id="@+id/add_to_sale_order_minus"
            android:layout_width="@dimen/item_margin"
            android:layout_height="@dimen/item_margin"
            android:layout_margin="@dimen/inside_margin"
            android:gravity="center"
            android:textSize="@dimen/text_size_xxlarge"
            android:text="-"
            />
        <EditText
            android:id="@+id/add_to_sale_order_qty"
            android:layout_width="@dimen/item_margin"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/inside_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/body_text_1"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:text="1"
            android:inputType="number"
            tools:text="1"/>
        <Button
            android:id="@+id/add_to_sale_order_plus"
            android:layout_width="@dimen/item_margin"
            android:layout_height="@dimen/item_margin"
            android:layout_margin="@dimen/inside_margin"
            android:gravity="center"
            android:textSize="@dimen/text_size_xxlarge"
            android:text="+"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/inside_margin"
        android:orientation="horizontal"
        android:background="@color/itemBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/body_text_2"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/detail_product_options_add_so_dialog_notes_label"
            tools:text="Catatan"/>
        <EditText
            android:id="@+id/add_to_sale_order_notes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/inside_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/body_text_2"
            android:textSize="@dimen/text_size_medium"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/inside_margin"
        android:ellipsize="end"
        android:gravity="center"
        android:textColor="@color/body_text_1"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/detail_product_options_add_so_dialog_exp"
        />

    <ListView
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/so_list_height"
        android:background="@color/theme_primary_background"
        android:dividerHeight="1px"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/inside_margin"
        android:ellipsize="end"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/body_text_2"
        android:textSize="@dimen/text_size_xmedium"
        android:text="@string/detail_product_options_add_so_dialog_no_quotation"
        />

    <Button
        android:id="@+id/add_to_sale_order_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_16dp"
        android:text="@string/detail_product_options_add_so_dialog_create"
        />
</LinearLayout>