<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/settings_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/inside_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/settings_partner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/itemBackground"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/itemBackground"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@color/body_text_2"
                android:textSize="@dimen/text_size_large"
                android:text="@string/default_partner_string"
                tools:text="Rekanan Standar"/>
            <TextView
                android:id="@+id/settings_partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/inside_margin"
                android:ellipsize="end"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                tools:text="Dg Mappi Tana Toa"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/inside_margin"
            android:ellipsize="end"
            android:textColor="@color/body_text_3"
            android:textSize="@dimen/text_size_small"
            android:text="@string/default_partner_explanation"
            tools:text="...............Long explanation...................."/>
    </LinearLayout>
</LinearLayout>