<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/base_document_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:title="@string/settings_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inside_margin"
        android:orientation="vertical"
        android:background="@drawable/background_with_shadow"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@color/body_text_1"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/mail_message_create_dialog_title"
            tools:text="Buat Catatan Baru"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layerType="software"
            android:background="@drawable/line_section_separator" />

        <EditText
            android:id="@+id/mail_message_create_dialog_body"
            android:lines="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/inside_margin"
            android:gravity="top|start"
            android:ellipsize="end"
            android:textColor="@color/body_text_2"
            android:textSize="@dimen/text_size_medium"
            android:scrollbars="vertical"
            />
        <Button
            android:id="@+id/mail_message_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_16dp"
            android:background="@drawable/rounded_corner_red"
            android:text="@string/detail_leave_options_edit_dialog_save_button"
            android:textColor="@color/text_inverse"
            />
    </LinearLayout>
</ScrollView>